fixed deprecateds